# StratifyOS-mcu-lpc

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
include/: lpc_arch.h  mcu_lpc177x_8x.h  mcu_lpc17xx.h  mcu_lpc407x_8x.h  mcu_lpc43xx.h  mcu_lpc_core.h  mcu_lpc_dma.h  mcu_lpcxx7x_8x.h  mcu_lpcxx7x_8x.h.gch
include/cmsis/: LPC17xx.h  LPC407x_8x_177x_8x.h
ldscript/: lpc-common.ld  lpc1311-rom.ld  lpc1317-rom.ld  lpc1342-rom.ld  lpc1345-rom.ld  lpc1346-rom.ld  lpc1347-rom.ld  lpc1754-rom.ld  lpc1756-rom.ld  lpc1758-rom.ld  lpc1759-bootloader.ld  lpc1765-rom.ld  lpc1766-rom.ld  lpc1767-rom.ld  lpc1769-rom.ld  lpc1788-rom.ld
src/: CMakeLists.txt  adc_dev.c  core_dev.c  core_initclock.c  core_set_pinsel_func.c  core_setusbclock.c  core_sleep.c  core_startup.c  crc_dev.c  dac_dev.c  dac_dma_dev.c  dma_dev.c  eeprom_dev.c  eint_dev.c  emc_dev.c  enet_dev.c  fault_dev.c  flash_dev.c  i2c_dev.c  i2s_dev.c  lpc_config.c  lpc_flash.c  lpc_local.h  mci_dev.c  mcu_dev.c  mem_dev.c  mpu_dev.c  pio_dev.c  pwm_dev.c  qei_dev.c  rtc_dev.c  spi_dev.c  ssp_dev.c  tmr_dev.c  uart_dev.c  usb_dev.c  wdt.c
